@@ -163,6 +163,7 @@ t/85_universal_edit_link.t
 t/86_recent_changes.t
 t/87_more_recent_changes.t
 t/88_recent_changes_overtime.t
+t/89_recent_changes_ip_addr.t
 t/90_css_category_locale_classes.t
 t/91_username_in_templates.t
 t/92_node_name_from_cgi_obj.t
