@@ -24,6 +24,8 @@ More detailed changelogs can be found at
         Added a basic stylesheet, installed into the static_path directory.
         Fixed the JSON output for action=index (using a new dependency on
           Template::Plugin::JSON::Escape).
+        IP addresses no longer show on recent changes for people without the
+          admin preference set.
 
 0.66    12 April 2012
         All templates now have access to the "username" TT variable.
